Prevent Site Logo From Taking Up Extra Space

--- a/sass/site/header/_masthead.scss
+++ b/sass/site/header/_masthead.scss
@@ -113,10 +113,6 @@
 			}
 		}
 
-		a {
-			display: inline-block;
-		}
-
 		.site-description {
 			@include font-size(0.9333);
 			line-height: 1.7142;
